# cbytesparse

./: .coveragerc  .readthedocs.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build w tox.yml  build_wheels.yml  ci.yml  packaging.yml
docs/: conf.py  index.rst  installation.rst  reference.rst  requirements.txt
docs/_autosummary/: cbytesparse._c.BlockView.rst  cbytesparse._c.Memory.rst  cbytesparse._c.Rover.rst  cbytesparse._c.collapse_blocks.rst  cbytesparse._c.rst  cbytesparse.base.BaseBytesMethods.rst  cbytesparse.base.BaseInplaceView.rst  cbytesparse.base.rst  cbytesparse.c.BlockView.rst  cbytesparse.c.BytesMethods.rst  cbytesparse.c.InplaceView.rst  cbytesparse.c.Memory.rst  cbytesparse.c.bytesparse.rst  cbytesparse.c.collapse_blocks.rst  cbytesparse.c.rst  cbytesparse.py.BaseBytesMethods.rst  cbytesparse.py.BaseInplaceView.rst  cbytesparse.py.BytesMethods.rst  cbytesparse.py.InplaceView.rst  cbytesparse.py.Memory.rst  cbytesparse.py.bytesparse.rst  cbytesparse.py.collapse_blocks.rst  cbytesparse.py.rst  cbytesparse.rst
scripts/: cython_build_src.py  cython_build_tests.py
src/cbytesparse/: __init__.pxd  __init__.py  _c.c  _c.pxd  _c.pyx  base.py  c.c  c.pxd  c.pyx  py.py
tests/: _buffers.py  _common.py  _test_c.pyx  test_c.py  test_py.py
