[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "*"

# Disabled use of tox as it was testing all Python versions on every wheel
# when wheels are generated for each supported version
# test-command = "tox -c {project}/tox.ini"
# test-requires = ["pytest","tox"]
test-command = "pytest {project}/tests"
test-requires = "pytest"

# Skip CP 32-bit and all 3.6
skip = ["cp36-*","cp3*_i686", "*-win32*"]
