[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61"]

[project]
authors = [
    {name = "Andrea Zoppi", email = "texzk@email.it"},
    {name = "Caroline Russell"},
]
classifiers = [
    # complete classifier list:
    # http://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Software Development",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Utilities",
]
dependencies = [
    # "bytesparse >= 0.0.5",  # comment out and use the one below for development instead
    "bytesparse @ git+https://github.com/TexZK/bytesparse.git",  # only for development
]
description = "Library to handle sparse bytes within a virtual memory space"
dynamic = ["version"]
license = {text = "BSD-2-Clause"}
name = "cbytesparse"
readme = "README.rst"
requires-python = ">= 3.7"

[project.optional-dependencies]
bdist = ["cbuildwheel", "pytest"]
testing = ["Cython", "pytest"]
scripts = ["Cython"]

[project.urls]
documentation = "https://cbytesparse.readthedocs.io"
source = "https://github.com/TexZK/cbytesparse"
tracker = "https://github.com/TexZK/cbytesparse/issues"

[tool.setuptools.dynamic]
version = {attr = "cbytesparse.__version__"}

[tool.cibuildwheel]
build = "*"

# Disabled use of tox as it was testing all Python versions on every wheel
# when wheels are generated for each supported version
# test-command = "tox -c {project}/tox.ini"
# test-requires = ["pytest", "tox"]
test-command = "pytest {project}/tests"
test-requires = ["pytest", "numpy"]

skip = [
    "cp36-*",       # Python 3.6
    "cp*_i686",     # CPython 32-bit
    "*-win32*",     # Windows 32-bit
    "pp*",          # pypy
]
